обновление заголовка в зависимости от категории

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -156,6 +156,9 @@
 
             // Очищаем строку поиска
             $('#searchQuery').val('');
+            // Обновляем заголовок
+             var categoryTitle = $(this).text();
+            $('#categoryTitle').text(categoryTitle);
         });
 
         // Добавляем обработчик для "All categories"
