--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-<!-- Подключение библиотеки jQuery (если ещё не подключена) -->
+<!-- Подключение библиотеки jQuery-->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 
@@ -115,6 +115,7 @@
         success: function (data) {
             // Очищаем текущий HTML-контент таблицы
             $('tbody').empty();
+
 
             // Перебираем полученные данные и обновляем HTML-контент таблицы
             for (var i = 0; i < data.length; i++) {
@@ -232,9 +233,6 @@ function EditedProduct() {
     });
 }
 
-
-
-
 function deleteProduct(productId) {
     $.ajax({
         url: '/api/deleteProduct/' + productId,
@@ -282,7 +280,7 @@ function deleteProduct(productId) {
 
 <script>
     function saveProduct() {
-        // Получите значения полей формы
+        // Получаем значения полей формы
         var categoryId = parseInt(document.getElementById('categorySelect').value, 10);
         var manufacturerName = document.getElementById('manufacturerName').value;
         var manufacturerCountry = document.getElementById('manufacturerCountry').value;
@@ -341,7 +339,6 @@ function deleteProduct(productId) {
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <!-- Форма с параметрами -->
                 <form>
                     <!-- Выбор категории -->
                     <div class="mb-3">
@@ -355,7 +352,6 @@ function deleteProduct(productId) {
                         </select>
                     </div>
 
-                    <!-- Остальные поля -->
                     <div class="mb-3">
                         <label for="manufacturerName" class="form-label">Manufacturer Name</label>
                         <input type="text" class="form-control" id="manufacturerName" name="manufacturerName">
@@ -383,8 +379,6 @@ function deleteProduct(productId) {
                     </div>
 
                     <button type="button" class="btn btn-primary" onclick="saveProduct()">Save</button>
-
-
                 </form>
             </div>
         </div>
@@ -400,16 +394,11 @@ function deleteProduct(productId) {
                 <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <!-- Форма с параметрами -->
                 <form>
                     <div class="mb-3">
                         <label for="editCategorySelect" class="form-label">Category</label>
                         <input type="text" class="form-control" id="editCategorySelect" name="categoryId" readonly>
-                            <!-- Опции категорий здесь -->
                     </div>
-
-
-                    <!-- Остальные поля -->
                     <div class="mb-3">
                         <label for="editManufacturerName" class="form-label">Manufacturer Name</label>
                         <input type="text" class="form-control" id="editManufacturerName" name="manufacturerName">
@@ -436,22 +425,15 @@ function deleteProduct(productId) {
                         <label for="editDeviceName" class="form-label">Device Name</label>
                         <input type="text" class="form-control" id="editDeviceName" name="name">
                     </div>
-
                     <button type="button" class="btn btn-primary" onclick="EditedProduct()" data-product-id="your_product_id">Save</button>
-
-
                 </form>
             </div>
         </div>
     </div>
 </div>
-
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-
 </body>
 </html>
 
